working of fixing all the buttons

--- a/src/easv/GUI/View/Users/adminpage.fxml
+++ b/src/easv/GUI/View/Users/adminpage.fxml
@@ -4,39 +4,34 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<StackPane fx:id="stackpne" stylesheets="/easv/GUI/View/CSS/Styles.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="749.0" prefWidth="962.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.AdminController"
-                                    styleClass="logindiv">
+<StackPane fx:id="stackpne" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="749.0" prefWidth="962.0" styleClass="logindiv" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.AdminController">
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+      <AnchorPane fx:id="anchorid" prefHeight="200.0" prefWidth="200.0">
          <children>
             <Label layoutX="35.0" layoutY="25.0" prefHeight="33.0" prefWidth="112.0" text="admin name here " />
             <JFXButton fx:id="exitid" layoutX="866.0" layoutY="690.0" onAction="#exitbtn" prefHeight="33.0" prefWidth="63.0" text="Exit" />
             <TableView fx:id="customertable" layoutX="22.0" layoutY="115.0" prefHeight="365.0" prefWidth="224.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="name" />
-                <TableColumn prefWidth="75.0" text="email" />
-                  <TableColumn prefWidth="75.0" text="password" />
+                <TableColumn fx:id="cutomername" prefWidth="75.0" text="name" />
+                <TableColumn fx:id="customeremail" prefWidth="148.0" text="email" />
               </columns>
             </TableView>
             <TableView fx:id="eventcorditable" layoutX="253.0" layoutY="115.0" prefHeight="365.0" prefWidth="224.0">
                <columns>
-                  <TableColumn prefWidth="75.0" text="name" />
-                  <TableColumn prefWidth="75.0" text="email" />
-                  <TableColumn prefWidth="75.0" text="event" />
+                  <TableColumn fx:id="evecorname" prefWidth="75.0" text="name" />
+                  <TableColumn fx:id="evecoremail" prefWidth="148.0" text="email" />
                </columns>
             </TableView>
-            <TableView fx:id="eventstable" layoutX="495.0" layoutY="115.0" prefHeight="365.0" prefWidth="459.0">
+            <TableView fx:id="eventstable" layoutX="495.0" layoutY="115.0" prefHeight="365.0" prefWidth="453.0">
                <columns>
-                  <TableColumn prefWidth="75.0" text="name" />
-                  <TableColumn prefWidth="75.0" text="location" />
-                  <TableColumn prefWidth="75.0" text="StartDate" />
-                  <TableColumn prefWidth="75.0" text="EndDate" />
-                  <TableColumn prefWidth="79.0" text="Participant" />
-                  <TableColumn prefWidth="71.0" text="ticket.alt" />
+                  <TableColumn fx:id="eventname" prefWidth="75.0" text="name" />
+                  <TableColumn fx:id="eventlocation" prefWidth="75.0" text="location" />
+                  <TableColumn fx:id="evestartdate" prefWidth="143.0" text="StartDate" />
+                  <TableColumn fx:id="eventenddate" prefWidth="159.0" text="EndDate" />
                </columns>
             </TableView>
             <JFXButton layoutX="22.0" layoutY="489.0" onAction="#deleteUserbtn" text="Delete" />
@@ -48,6 +43,7 @@
             <Label layoutX="21.0" layoutY="80.0" prefHeight="25.0" prefWidth="60.0" text="Customers" />
             <Label layoutX="255.0" layoutY="80.0" prefHeight="25.0" prefWidth="112.0" text="EventCoordinator " />
             <Label layoutX="495.0" layoutY="80.0" prefHeight="25.0" prefWidth="60.0" text="Events" />
+            <TextField layoutX="754.0" layoutY="29.0" onKeyPressed="#searcher" prefHeight="25.0" prefWidth="175.0" />
          </children>
       </AnchorPane>
    </children>
