--- a/src/easv/GUI/View/Users/EventMangers.fxml
+++ b/src/easv/GUI/View/Users/EventMangers.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
@@ -10,7 +12,7 @@
 
 <StackPane fx:id="stackid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="749.0" prefWidth="962.0" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.EventMangersController">
    <children>
-      <AnchorPane fx:id="ancorid" prefHeight="749.0" prefWidth="962.0" styleClass="changedBackgroundColor">
+      <AnchorPane fx:id="ancorid" onMousePressed="#anchorouse" prefHeight="749.0" prefWidth="962.0" styleClass="changedBackgroundColor">
          <children>
             <TableView fx:id="tableviewevents" layoutX="326.0" layoutY="14.0" onMousePressed="#getUsersinSelectedEvent" prefHeight="354.0" prefWidth="630.0">
                <columns>
@@ -22,7 +24,7 @@
                   <TableColumn fx:id="eventticketalt" minWidth="0.0" prefWidth="33.0" text="T.alt" />
                </columns>
             </TableView>
-            <TableView fx:id="tableviewusers" layoutX="13.0" layoutY="13.0" prefHeight="694.0" prefWidth="308.0">
+            <TableView fx:id="tableviewusers" layoutX="13.0" layoutY="42.0" prefHeight="665.0" prefWidth="308.0">
                <columns>
                   <TableColumn fx:id="usercheckbox" prefWidth="29.0" text="C1">
 <!--                     <graphic>-->
@@ -33,7 +35,7 @@
                   <TableColumn fx:id="userticket" prefWidth="146.0" text="Ticket" />
                </columns>
             </TableView>
-            <TableView fx:id="tableviewtickets" layoutX="326.0" layoutY="467.0" prefHeight="187.0" prefWidth="607.0">
+            <TableView fx:id="tableviewtickets" layoutX="326.0" layoutY="467.0" onMousePressed="#ticketmouse" prefHeight="187.0" prefWidth="607.0">
                <columns>
                   <TableColumn fx:id="tickettype" prefWidth="90.0" text="type" />
                   <TableColumn fx:id="ticketprice" prefWidth="66.0" text="ticketprice" />
@@ -47,6 +49,8 @@
             <JFXButton fx:id="updateeventid" layoutX="533.0" layoutY="375.0" onAction="#updateeventbtn" prefHeight="27.0" prefWidth="92.0" style="-fx-background-color: #2196f3;" text="Update Event" />
             <JFXButton fx:id="updateticketid" layoutX="533.0" layoutY="415.0" onAction="#updateticketbtn" prefHeight="27.0" prefWidth="92.0" style="-fx-background-color: #2196f3;" text="Update Ticket" />
             <JFXButton fx:id="backid" layoutX="847.0" layoutY="701.0" onAction="#backbtn" prefHeight="27.0" prefWidth="86.0" style="-fx-background-color: #f6f6f5;" text="Exit" />
+            <TextField fx:id="filter" layoutX="66.0" layoutY="14.0" onKeyPressed="#filteruser" prefHeight="25.0" prefWidth="248.0" />
+            <Label layoutX="12.0" layoutY="18.0" prefHeight="17.0" prefWidth="48.0" text="Search" />
          </children>
       </AnchorPane>
    </children>
