--- a/src/easv/GUI/View/CreateAccount.fxml
+++ b/src/easv/GUI/View/CreateAccount.fxml
@@ -12,14 +12,17 @@
 
 <StackPane fx:id="stackpaneid" prefHeight="722.0" prefWidth="926.0" styleClass="blue" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.CreateAccountController">
    <children>
-      <AnchorPane fx:id="anchorid" prefHeight="196.0" prefWidth="327.0" style="-fx-background-color: #F4DF4EFF;">
+      <AnchorPane fx:id="anchorid" prefHeight="196.0" prefWidth="327.0" style="-fx-background-color: #212121;">
          <children>
-            <JFXButton fx:id="save" buttonType="RAISED" layoutX="563.0" layoutY="622.0" onAction="#saveUser" prefHeight="25.0" prefWidth="67.0" style="-fx-background-color: #949398FF; -fx-background-radius: 90;" text="Save">
+            <JFXButton fx:id="save" buttonType="RAISED" layoutX="738.0" layoutY="655.0" onAction="#saveUser" prefHeight="25.0" prefWidth="67.0" style="-fx-background-color: #64dd17; -fx-background-radius: 90;" text="Save" textFill="WHITE">
                <font>
-                  <Font name="System Bold Italic" size="15.0" />
+                  <Font size="15.0" />
                </font></JFXButton>
-            <JFXButton fx:id="exitid" buttonType="RAISED" layoutX="830.0" layoutY="620.0" onAction="#exit" prefHeight="35.0" prefWidth="45.0" style="-fx-background-color: #949398FF; -fx-background-radius: 90;" text="Exit" textFill="#ff0505" />
-            <AnchorPane prefHeight="722.0" prefWidth="544.0" style="-fx-background-color: #949398FF;">
+            <JFXButton fx:id="exitid" buttonType="RAISED" layoutX="837.0" layoutY="653.0" onAction="#exit" prefHeight="35.0" prefWidth="51.0" style="-fx-background-color: #64dd17; -fx-background-radius: 90;" text="Exit" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font></JFXButton>
+            <AnchorPane prefHeight="722.0" prefWidth="544.0" style="-fx-background-color: #212121;">
                <children>
                   <ImageView fitHeight="91.0" fitWidth="87.0" layoutX="229.0" layoutY="193.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -33,32 +36,32 @@
                   </Label>
                </children>
             </AnchorPane>
-            <TextField layoutX="583.0" layoutY="305.0" prefHeight="35.0" prefWidth="222.0" promptText="username" style="-fx-background-color: #949398FF;">
+            <TextField layoutX="599.0" layoutY="304.0" prefHeight="35.0" prefWidth="222.0" promptText="username" style="-fx-background-color: #ffffff; -fx-background-radius: 90;">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <TextField layoutX="583.0" layoutY="375.0" prefHeight="35.0" prefWidth="222.0" promptText="Password" style="-fx-background-color: #949398FF;">
+            <TextField layoutX="599.0" layoutY="376.0" prefHeight="35.0" prefWidth="222.0" promptText="Password" style="-fx-background-color: #ffffff; -fx-background-radius: 90;">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <TextField layoutX="583.0" layoutY="523.0" prefHeight="35.0" prefWidth="222.0" promptText="Email" style="-fx-background-color: #949398FF;">
+            <TextField layoutX="599.0" layoutY="518.0" prefHeight="35.0" prefWidth="222.0" promptText="Email" style="-fx-background-color: #ffffff; -fx-background-radius: 90;">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <TextField layoutX="583.0" layoutY="451.0" prefHeight="35.0" prefWidth="222.0" promptText="RepeatPassword" style="-fx-background-color: #949398FF;">
+            <TextField layoutX="599.0" layoutY="451.0" prefHeight="35.0" prefWidth="222.0" promptText="RepeatPassword" style="-fx-background-color: #ffffff; -fx-background-radius: 90;">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <Label layoutX="563.0" layoutY="168.0" prefHeight="35.0" prefWidth="191.0" text="Create An Acount " textFill="#8d8381">
+            <Label layoutX="614.0" layoutY="158.0" prefHeight="35.0" prefWidth="191.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="  Create An Acount " textFill="WHITE">
                <font>
                   <Font name="Consolas" size="18.0" />
                </font>
             </Label>
-            <Separator layoutX="553.0" layoutY="237.0" prefHeight="6.0" prefWidth="345.0" style="-fx-background-color: #949398FF;" />
+            <Separator layoutX="553.0" layoutY="237.0" prefHeight="6.0" prefWidth="345.0" style="-fx-background-color: #64dd17;" />
          </children>
       </AnchorPane>
    </children>
