--- a/src/easv/GUI/View/Users/adminpage.fxml
+++ b/src/easv/GUI/View/Users/adminpage.fxml
@@ -7,21 +7,28 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
 <StackPane fx:id="stackpne" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="749.0" prefWidth="962.0" styleClass="logindiv" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.AdminController">
    <children>
-      <AnchorPane fx:id="anchorid" prefHeight="200.0" prefWidth="200.0">
+      <AnchorPane fx:id="anchorid" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #212121;">
          <children>
-            <Label layoutX="35.0" layoutY="25.0" prefHeight="33.0" prefWidth="112.0" text="admin name here " />
-            <JFXButton fx:id="exitid" layoutX="866.0" layoutY="690.0" onAction="#exitbtn" prefHeight="33.0" prefWidth="63.0" text="Exit" />
-            <TableView fx:id="customertable" layoutX="22.0" layoutY="115.0" prefHeight="365.0" prefWidth="373.0">
+            <Label layoutX="31.0" layoutY="25.0" prefHeight="33.0" prefWidth="128.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="  Admin name here " textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <JFXButton fx:id="exitid" layoutX="866.0" layoutY="690.0" onAction="#exitbtn" prefHeight="33.0" prefWidth="63.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Exit" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font></JFXButton>
+            <TableView fx:id="customertable" layoutX="23.0" layoutY="170.0" prefHeight="365.0" prefWidth="373.0">
               <columns>
                 <TableColumn fx:id="cutomername" prefWidth="75.0" text="name" />
-                <TableColumn fx:id="customeremail" prefWidth="148.0" text="email" />
                   <TableColumn fx:id="customertyoe" prefWidth="148.0" text="Type" />
+                <TableColumn fx:id="customeremail" prefWidth="148.0" text="email" />
               </columns>
             </TableView>
-            <TableView fx:id="eventstable" layoutX="495.0" layoutY="115.0" prefHeight="365.0" prefWidth="453.0">
+            <TableView fx:id="eventstable" layoutX="481.0" layoutY="170.0" prefHeight="365.0" prefWidth="453.0">
                <columns>
                   <TableColumn fx:id="eventname" prefWidth="75.0" text="name" />
                   <TableColumn fx:id="eventlocation" prefWidth="75.0" text="location" />
@@ -29,10 +36,22 @@
                   <TableColumn fx:id="eventenddate" prefWidth="159.0" text="EndDate" />
                </columns>
             </TableView>
-            <JFXButton layoutX="22.0" layoutY="489.0" onAction="#deleteUserbtn" text="Delete" />
-            <JFXButton fx:id="createid" layoutX="147.0" layoutY="489.0" onAction="#createUserbtn" text="Create" />
-            <Label layoutX="21.0" layoutY="80.0" prefHeight="25.0" prefWidth="60.0" text="Customers" />
-            <Label layoutX="495.0" layoutY="80.0" prefHeight="25.0" prefWidth="60.0" text="Events" />
+            <JFXButton layoutX="23.0" layoutY="553.0" onAction="#deleteUserbtn" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Delete" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></JFXButton>
+            <JFXButton fx:id="createid" layoutX="99.0" layoutY="553.0" onAction="#createUserbtn" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Create" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></JFXButton>
+            <Label layoutX="23.0" layoutY="123.0" prefHeight="25.0" prefWidth="81.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="  Customers" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label layoutX="481.0" layoutY="123.0" prefHeight="25.0" prefWidth="60.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="  Events" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
             <TextField fx:id="filter" layoutX="754.0" layoutY="29.0" onKeyPressed="#searcher" prefHeight="25.0" prefWidth="175.0" />
          </children>
       </AnchorPane>
