--- a/src/easv/GUI/View/Users/customerpage.fxml
+++ b/src/easv/GUI/View/Users/customerpage.fxml
@@ -7,16 +7,23 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
 <StackPane fx:id="stackpanid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="724.0" prefWidth="934.0" styleClass="honey" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.CustomerController">
    <children>
-      <AnchorPane fx:id="anchorpaneid" prefHeight="724.0" prefWidth="934.0" style="-fx-background-color: #FFBD33;" stylesheets="/easv/GUI/View/CSS/Styles.css">
+      <AnchorPane fx:id="anchorpaneid" prefHeight="724.0" prefWidth="934.0" style="-fx-background-color: #212121;" stylesheets="/easv/GUI/View/CSS/Styles.css">
          <children>
-            <Separator layoutX="262.0" layoutY="25.0" orientation="VERTICAL" prefHeight="672.0" prefWidth="9.0" />
-            <ChoiceBox fx:id="choicebox" layoutX="21.0" layoutY="54.0" prefHeight="25.0" prefWidth="201.0" style="-fx-background-color: #FFBD33;" />
+            <Separator layoutX="262.0" layoutY="25.0" orientation="VERTICAL" prefHeight="672.0" prefWidth="0.0" style="-fx-background-color: #64dd17;" />
+            <ChoiceBox fx:id="choicebox" layoutX="21.0" layoutY="54.0" prefHeight="25.0" prefWidth="201.0" />
             <ImageView fx:id="imageid" fitHeight="288.0" fitWidth="627.0" layoutX="286.0" layoutY="398.0" pickOnBounds="true" preserveRatio="true" />
-            <JFXButton layoutX="21.0" layoutY="661.0" text="Close" />
-            <Label layoutX="30.0" layoutY="17.0" prefHeight="17.0" prefWidth="201.0" text="your Tcikets list " />
+            <JFXButton layoutX="21.0" layoutY="661.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Close" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font></JFXButton>
+            <Label layoutX="21.0" layoutY="15.0" prefHeight="17.0" prefWidth="201.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="  Your Tcikets list " textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
          </children></AnchorPane>
    </children>
 </StackPane>
