--- a/src/easv/GUI/View/create/create_premot.fxml
+++ b/src/easv/GUI/View/create/create_premot.fxml
@@ -6,20 +6,35 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
-
+<?import javafx.scene.text.Font?>
 
 <StackPane prefHeight="722.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.create.CreatePremotController">
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #212121;">
          <children>
             <ChoiceBox fx:id="choiceboxid" layoutX="314.0" layoutY="373.0" prefWidth="150.0" />
             <TextField fx:id="usernametxt" layoutX="314.0" layoutY="219.0" promptText="username" />
             <TextField fx:id="emailtxt" layoutX="314.0" layoutY="288.0" promptText="email address" />
-            <Label layoutX="314.0" layoutY="184.0" prefHeight="25.0" prefWidth="78.0" text="Name" />
-            <Label layoutX="314.0" layoutY="253.0" prefHeight="25.0" prefWidth="78.0" text="email" />
-            <Label layoutX="314.0" layoutY="336.0" prefHeight="25.0" prefWidth="78.0" text="Type" />
-            <JFXButton fx:id="saveid" layoutX="337.0" layoutY="437.0" onAction="#save" prefHeight="25.0" prefWidth="78.0" text="Save" />
-            <JFXButton fx:id="exitid" layoutX="337.0" layoutY="483.0" onAction="#eixit" prefHeight="25.0" prefWidth="78.0" text="Exit" />
+            <Label layoutX="159.0" layoutY="219.0" prefHeight="25.0" prefWidth="78.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="  Name" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label layoutX="159.0" layoutY="288.0" prefHeight="25.0" prefWidth="78.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="  Email" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label layoutX="159.0" layoutY="373.0" prefHeight="25.0" prefWidth="78.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="  Type" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <JFXButton fx:id="saveid" layoutX="714.0" layoutY="667.0" onAction="#save" prefHeight="25.0" prefWidth="78.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Save" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font></JFXButton>
+            <JFXButton fx:id="exitid" layoutX="819.0" layoutY="667.0" onAction="#eixit" prefHeight="25.0" prefWidth="78.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Exit" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font></JFXButton>
          </children>
       </AnchorPane>
    </children>
