--- a/src/easv/GUI/View/loginpage.fxml
+++ b/src/easv/GUI/View/loginpage.fxml
@@ -14,8 +14,14 @@
          <children>
             <TextField fx:id="usernameid" layoutX="329.0" layoutY="268.0" prefHeight="25.0" prefWidth="231.0" promptText="Username" />
             <TextField fx:id="passwordid" layoutX="329.0" layoutY="323.0" prefHeight="25.0" prefWidth="231.0" promptText="password" />
-            <JFXButton fx:id="loginid" buttonType="RAISED" layoutX="382.0" layoutY="385.0" onAction="#loginbtn" prefHeight="52.0" prefWidth="130.0" ripplerFill="WHITE" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Login" textFill="WHITE" />
-            <JFXButton fx:id="backid" buttonType="RAISED" layoutX="382.0" layoutY="460.0" onAction="#backbtn" prefHeight="52.0" prefWidth="130.0" ripplerFill="#eeeeee" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Back" textFill="#fffefe" />
+            <JFXButton fx:id="loginid" buttonType="RAISED" layoutX="382.0" layoutY="385.0" onAction="#loginbtn" prefHeight="52.0" prefWidth="130.0" ripplerFill="WHITE" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Login" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font></JFXButton>
+            <JFXButton fx:id="backid" buttonType="RAISED" layoutX="382.0" layoutY="460.0" onAction="#backbtn" prefHeight="52.0" prefWidth="130.0" ripplerFill="#eeeeee" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Back" textFill="#fffefe">
+               <font>
+                  <Font size="15.0" />
+               </font></JFXButton>
             <Label layoutX="382.0" layoutY="160.0" prefHeight="52.0" prefWidth="130.0" text="Login" textFill="#fcfcfc">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="44.0" />
